# DanmuBridge

./: .gitignore  README.en.md  README.md  README.zh-CN.md  pyproject.toml
docs/: release.md  release.zh-CN.md
src/danmubridge/: attach.py  cli.py  fetch.py  sync.py
